--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.15.1",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xss-clean": "^0.1.4"
   }
 }
